--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "dev": "node server",
-    "build": "webpack --config=webpack.server.config.js && webpack --config=webpack.server.config.js",
+    "build": "webpack --config=webpack.server.config.js && webpack --config=webpack.client.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
